--- a/source/PeopleSearch/package.json
+++ b/source/PeopleSearch/package.json
@@ -38,10 +38,12 @@
         "dropzone": "^5.5.1",
         "element-resize-detector": "^1.1.15",
         "font-awesome": "^4.7.0",
+        "inputmask": "^4.0.8",
         "jquery": "^3.4.1",
         "jwt-decode": "^2.2.0",
         "moment": "^2.24.0",
         "nprogress": "^0.2.0",
+        "numeral": "^2.0.6",
         "oidc-client": "^1.7.1",
         "popper.js": "^1.15.0",
         "requirejs": "^2.3.6",
